...
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgSewingMachineDetails"
            app:layout_constraintVertical_bias="0.2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etxtSewingMachineName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/txtSewingMachineName"
                android:singleLine="true"
                android:textColor="#000000" />

...
            android:theme="@style/AppTheme.DARKBLUE"
            app:layout_constraintBottom_toBottomOf="@+id/txtMotorSteps"
            app:layout_constraintStart_toEndOf="@+id/txtMotorSteps"
            app:layout_constraintTop_toTopOf="@+id/txtMotorSteps" />

        <Button
            android:id="@+id/btnSewingMachineAction"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btnSewingmachinesActionDefault"
            android:theme="@style/AppTheme.DARKBLUE"
            app:layout_constraintBottom_toBottomOf="parent"
...
